fix(web-styles): adds forced-colors/high-contrast mode focus-visible style for mozilla

--- a/packages/web-styles/src/components/form-range.scss
+++ b/packages/web-styles/src/components/form-range.scss
@@ -78,6 +78,11 @@
           outline-offset: commons.$border-thick;
           outline: commons.$border-thick solid Highlight;
         }
+
+        &::-moz-range-thumb {
+          outline-offset: commons.$border-thick;
+          outline: commons.$border-thick solid Highlight;
+        }
       }
     }
 
